--- a/ClientApp/src/app/side-nav/side-nav.component.html
+++ b/ClientApp/src/app/side-nav/side-nav.component.html
@@ -116,7 +116,7 @@
         </nav>
     
         <div class="content">
-            <div class="img">
+            <div class="img animated zoomIn">
                 <img src="assets/Logoupc.png" alt="Logo">
             </div>
         </div>
