--- a/ClientApp/src/app/login/login.component.css
+++ b/ClientApp/src/app/login/login.component.css
@@ -1,87 +1,46 @@
-body {
-    margin: 0;
-    padding: 0;
-    /* background: url(.../ass/bg.jpeg) no-repeat center top; */
-    background: #b80f22;
-    background-size: cover;
-    font-family: sans-serif;
-    height: 100vh;
-  }
+/* mat-toolbar {
+  padding-left: 3rem;
+  background-color: rgba(255, 255, 255, 0.96);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+mat-toolbar a{
+  color: #9A9A9A;
+} */
+
+.panel {
+  position: relative;
+  z-index: 2;
+  float: right;
+  width: 100%;
+  /* height: 90%; */
+  background: rgba(0,0,0,0);
   
-  .login-box {
-    width: 320px;
-    height: 420px;
-    background: #000;
-    color: #fff;
-    top: 50%;
-    left: 50%;
-    position: absolute;
-    transform: translate(-50%, -50%);
-    box-sizing: border-box;
-    padding: 70px 30px;
-  }
-  
-  .login-box .avatar {
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    position: absolute;
-    top: -50px;
-    left: calc(50% - 50px);
-  }
-  
-  .login-box h1 {
-    margin: 0;
-    padding: 0 0 20px;
-    text-align: center;
-    font-size: 22px;
-  }
-  
-  .login-box label {
-    margin: 0;
-    padding: 0;
-    font-weight: bold;
-    display: block;
-  }
-  
-  .login-box input {
-    width: 100%;
-    margin-bottom: 20px;
-  }
-  
-  .login-box input[type="text"], .login-box input[type="password"] {
-    border: none;
-    border-bottom: 1px solid #fff;
-    background: transparent;
-    outline: none;
-    height: 40px;
-    color: #fff;
-    font-size: 16px;
-  }
-  
-  .login-box input[type="submit"] {
-    border: none;
-    outline: none;
-    height: 40px;
-    background: #b80f22;
-    color: #fff;
-    font-size: 18px;
-    border-radius: 20px;
-  }
-  
-  .login-box input[type="submit"]:hover {
-    cursor: pointer;
-    background: #ffc107;
-    color: #000;
-  }
-  
-  .login-box a {
-    text-decoration: none;
-    font-size: 12px;
-    line-height: 20px;
-    color: darkgrey;
-  }
-  
-  .login-box a:hover {
-    color: #fff;
-  }
+}
+
+
+.panel > .content {
+  padding: 30px 15px;
+  min-height: calc(100% - 123px);
+}
+
+.panel > .footer {
+  border-top: 1px solid #e7e7e7;
+}
+
+.panel .navbar {
+  margin-bottom: 0;
+}
+.contenido{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+.card{
+  text-align: center;
+}
+.form-group{
+  padding: 10px;
+}
