--- a/ClientApp/src/assets/css/light-bootstrap-dashboard.css
+++ b/ClientApp/src/assets/css/light-bootstrap-dashboard.css
@@ -2999,7 +2999,7 @@ fieldset[disabled] .btn-neutral.active {
     display: table;
     clear: both;
 }
-
+navbar
 .ct-major-sixth > svg {
     display: block;
     position: absolute;
